--- a/site/style.css
+++ b/site/style.css
@@ -1,6 +1,6 @@
 
 /* Begin Algemeen */
-@import url('https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&subset=devanagari,latin-ext');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
 *{
     font-family: sans-serif;
     margin:0;
@@ -11,27 +11,23 @@ footer body{
     line-height: 1.5;
     font-family: 'Poppins', sans-serif;
 }
-body header{
-    font-family: 'Poppins', sans-serif;
-  font-size: 16px;
-  line-height: 24px;
-  font-weight: 400;
-  color: #212112;
-  background-position: center;
-  background-repeat: repeat;
-  background-size: 7%;
-  background-color: #fff;
-  overflow-x: hidden;
-    transition: all 200ms linear;
+header body{
+    
+        font-family: 'Poppins', sans-serif;
+      font-size: 16px;
+      line-height: 24px;
+      font-weight: 400;
+      color: #212112;
+      background-image: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/1462889/pat-back.svg');
+      background-position: center;
+      background-repeat: repeat;
+      background-size: 7%;
+      background-color: #fff;
+      overflow-x: hidden;
+        transition: all 200ms linear;
+    
 }
-::selection{
-    color: #fff;
-    background-color: #8167a9;    
-}
-::-moz-selection {
-    color: #fff;
-    background-color: #8167a9;
-  }
+
 ul{
     list-style: none;
 }
@@ -39,8 +35,232 @@ table{
     position: relative;
     left:12.5%;
 }
+
 /* Einde Algemeen */
 /* Header Begin */
+.header-blue {
+    background: linear-gradient(135deg, #fe2929, #ffb3c5);
+    background-color: #184e8e;
+    padding-bottom: 80px;
+    font-family: 'Source Sans Pro', sans-serif;
+  }
+  
+  @media (min-width:768px) {
+    .header-blue {
+      padding-bottom: 120px;
+    }
+  }
+  
+  .header-blue .navbar {
+    background: transparent;
+    padding-top: .75rem;
+    padding-bottom: .75rem;
+    color: #fff;
+    border-radius: 0;
+    box-shadow: none;
+    border: none;
+  }
+  
+  @media (min-width:768px) {
+    .header-blue .navbar {
+      padding-top: 1rem;
+      padding-bottom: 1rem;
+    }
+  }
+  
+  .header-blue .navbar .navbar-brand {
+    font-weight: bold;
+    color: inherit;
+  }
+  
+  .header-blue .navbar .navbar-brand:hover {
+    color: #f0f0f0;
+  }
+  
+  .header-blue .navbar .navbar-collapse {
+    border-top: 1px solid rgba(255,255,255,0.3);
+    margin-top: .5rem;
+  }
+  
+  @media (min-width:768px) {
+    .header-blue .navbar .navbar-collapse {
+      border-color: transparent;
+      margin: 0;
+    }
+  }
+  
+  .header-blue .navbar .navbar-collapse span .login {
+    color: #fff;
+    margin-right: .5rem;
+    text-decoration: none;
+  }
+  
+  .header-blue .navbar .navbar-collapse span .login:hover {
+    color: #fff;
+  }
+  
+  .header-blue .navbar .navbar-toggler {
+    border-color: rgba(255,255,255,0.3);
+  }
+  
+  .header-blue .navbar .navbar-toggler:hover, .header-blue .navbar-toggler:focus {
+    background: none;
+  }
+  
+  @media (min-width: 768px) {
+    .header-blue .navbar-nav .nav-link {
+      padding-left: .7rem;
+      padding-right: .7rem;
+    }
+  }
+  
+  @media (min-width: 992px) {
+    .header-blue .navbar-nav .nav-link {
+      padding-left: 1.2rem;
+      padding-right: 1.2rem;
+    }
+  }
+  
+  .header-blue .navbar.navbar-light .navbar-nav .nav-link {
+    color: #fff;
+  }
+  
+  .header-blue .navbar.navbar-light .navbar-nav .nav-link:focus, .header-blue .navbar.navbar-light .navbar-nav .nav-link:hover {
+    color: #fcfeff !important;
+    background-color: transparent;
+  }
+  
+  .header-blue .navbar .navbar-nav > li > .dropdown-menu {
+    margin-top: -5px;
+    box-shadow: 0 4px 8px rgba(0,0,0,.1);
+    background-color: #fff;
+    border-radius: 2px;
+  }
+  
+  .header-blue .navbar .dropdown-menu .dropdown-item:focus, .header-blue .navbar .dropdown-menu .dropdown-item {
+    line-height: 2;
+    color: #37434d;
+  }
+  
+  .header-blue .navbar .dropdown-menu .dropdown-item:focus, .header-blue .navbar .dropdown-menu .dropdown-item:hover {
+    background: #ebeff1;
+  }
+  
+  .header-blue .action-button, .header-blue .action-button:not(.disabled):active {
+    border: 1px solid rgb(255,255,255);
+    border-radius: 40px;
+    color: #fff;
+    box-shadow: none;
+    text-shadow: none;
+    padding: .3rem .8rem;
+    background: transparent;
+    transition: background-color 0.25s;
+    outline: none;
+  }
+  
+  .header-blue .action-button:hover {
+    color: #fff;
+  }
+  
+  .header-blue .navbar .form-inline label {
+    color: #d9d9d9;
+  }
+  
+  .header-blue .navbar .form-inline .search-field {
+    display: inline-block;
+    width: 80%;
+    background: none;
+    border: none;
+    border-bottom: 1px solid transparent;
+    border-radius: 0;
+    color: #fff;
+    box-shadow: none;
+    color: inherit;
+    transition: border-bottom-color 0.3s;
+  }
+  
+  .header-blue .navbar .form-inline .search-field:focus {
+    border-bottom: 1px solid #ccc;
+  }
+  
+  .header-blue .hero {
+    margin-top: 20px;
+    text-align: center;
+  }
+  
+  @media (min-width:768px) {
+    .header-blue .hero {
+      margin-top: 60px;
+      text-align: left;
+    }
+  }
+  
+  .header-blue .hero h1 {
+    color: #fff;
+    font-size: 40px;
+    margin-top: 0;
+    margin-bottom: 15px;
+    font-weight: 300;
+    line-height: 1.4;
+  }
+  
+  @media (min-width:992px) {
+    .header-blue .hero h1 {
+      margin-top: 190px;
+      margin-bottom: 24px;
+      line-height: 1.2;
+    }
+  }
+  
+  .header-blue .hero p {
+    color: rgba(255,255,255,0.8);
+    font-size: 20px;
+    margin-bottom: 30px;
+    font-weight: 300;
+  }
+  
+  .header-blue .phone-holder {
+    text-align: right;
+  }
+  
+  .header-blue div.iphone-mockup {
+   position: relative;
+      max-width: 300px;
+      margin-top: 172px;
+      display: inline-block;
+  }
+  
+  .header-blue .iphone-mockup img.device {
+    width: 100%;
+    height: auto;
+  }
+  
+  .header-blue .iphone-mockup .screen {
+    position: absolute;
+    width: 88%;
+    height: 77%;
+    top: 12%;
+    border-radius: 2px;
+    left: 6%;
+    border: 1px solid #444;
+    background-color: #aaa;
+    overflow: hidden;
+    background: url(../../assets/img/screen-content-iphone-6.jpg);
+    background-size: cover;
+    background-position: center;
+  }
+  
+  .header-blue .iphone-mockup .screen:before {
+    content: '';
+    background-color: #fff;
+    position: absolute;
+    width: 70%;
+    height: 140%;
+    top: -12%;
+    right: -60%;
+    transform: rotate(-19deg);
+    opacity: 0.2;
+  }
 /*
 .header-top {
     color: #ccc;
@@ -66,124 +286,6 @@ header {
 }
 /* Einde Header */
 /* Navigation Begin */
-.start-header {
-    opacity: 1;
-    transform: translateY(0);
-    padding: 20px 0;
-    box-shadow: 0 10px 30px 0 rgba(138, 155, 165, 0.15);
-    -webkit-transition : all 0.3s ease-out;
-    transition : all 0.3s ease-out;
-  }
-  .start-header.scroll-on {
-    box-shadow: 0 5px 10px 0 rgba(138, 155, 165, 0.15);
-    padding: 10px 0;
-    -webkit-transition : all 0.3s ease-out;
-    transition : all 0.3s ease-out;
-  }
-  .start-header.scroll-on .navbar-brand img{
-    height: 24px;
-    -webkit-transition : all 0.3s ease-out;
-    transition : all 0.3s ease-out;
-  }
-  .navigation-wrap{
-    position: fixed;
-    width: 100%;
-    top: 0;
-    left: 0;
-    z-index: 1000;
-    -webkit-transition : all 0.3s ease-out;
-    transition : all 0.3s ease-out;
-  }
-  .navbar{
-    padding: 0;
-  }
-  .navbar-brand img{
-    height: 28px;
-    width: auto;
-    display: block;
-    filter: brightness(10%);
-    -webkit-transition : all 0.3s ease-out;
-    transition : all 0.3s ease-out;
-  }
-  .navbar-toggler {
-    float: right;
-    border: none;
-    padding-right: 0;
-  }
-  .navbar-toggler:active,
-  .navbar-toggler:focus {
-    outline: none;
-  }
-  .navbar-light .navbar-toggler-icon {
-    width: 24px;
-    height: 17px;
-    background-image: none;
-    position: relative;
-    border-bottom: 1px solid #000;
-      transition: all 300ms linear;
-  }
-  .navbar-light .navbar-toggler-icon:after, 
-  .navbar-light .navbar-toggler-icon:before{
-    width: 24px;
-    position: absolute;
-    height: 1px;
-    background-color: #000;
-    top: 0;
-    left: 0;
-    content: '';
-    z-index: 2;
-      transition: all 300ms linear;
-  }
-  .navbar-light .navbar-toggler-icon:after{
-    top: 8px;
-  }
-  .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon:after {
-    transform: rotate(45deg);
-  }
-  .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon:before {
-    transform: translateY(8px) rotate(-45deg);
-  }
-  .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
-    border-color: transparent;
-  }
-  .nav-link{
-    color: #212121 !important;
-    font-weight: 500;
-      transition: all 200ms linear;
-  }
-  .nav-item:hover .nav-link{
-    color: #8167a9 !important;
-  }
-  .nav-item.active .nav-link{
-    color: #777 !important;
-  }
-  .nav-link {
-    position: relative;
-    padding: 5px 0 !important;
-    display: inline-block;
-  }
-  .nav-item:after{
-    position: absolute;
-    bottom: -5px;
-    left: 0;
-    width: 100%;
-    height: 2px;
-    content: '';
-    background-color: #8167a9;
-    opacity: 0;
-      transition: all 200ms linear;
-  }
-  .nav-item:hover:after{
-    bottom: 0;
-    opacity: 1;
-  }
-  .nav-item.active:hover:after{
-    opacity: 0;
-  }
-  .nav-item{
-    position: relative;
-      transition: all 200ms linear;
-  }
 .navigation {
     width: 85%;
     padding: 35px 0;
@@ -311,7 +413,7 @@ margin: 0 20px;
 
 }
 .main-container ul li a{
-       text-decoration: none;
+    text-decoration: none;
     color:rgb(0, 0, 0);
     text-transform:uppercase ;
 
@@ -320,384 +422,3 @@ margin: 0 20px;
 
 
 
-/* Begin Primary*/
-
-.bg-light {
-    background-color: #fff !important;
-      transition: all 200ms linear;
-  }
-  .section {
-      position: relative;
-    width: 100%;
-    display: block;
-  }
-  .full-height {
-      height: 100vh;
-  }
-  .over-hide {
-      overflow: hidden;
-  }
-  .absolute-center {
-    position: absolute;
-    top: 50%;
-    left: 0;
-    width: 100%;
-    margin-top: 40px;
-    transform: translateY(-50%);
-    z-index: 20;
-  }
-  h1{
-    font-size: 48px;
-    line-height: 1.2;
-    font-weight: 700;
-    color: #212112;
-    text-align: center;
-  }
-  p{
-    text-align: center;
-    margin: 0;
-    padding-top: 10px;
-    opacity: 1;
-    transform: translate(0);
-      transition: all 300ms linear;
-      transition-delay: 1700ms;
-  }
- body header.body-header p{
-    opacity: 0;
-    transform: translateY(40px);
-      transition-delay: 1700ms;
-  }
-  h1 span{
-    display: inline-block;
-      transition: all 300ms linear;
-    opacity: 1;
-    transform: translate(0);
-  }
- body header.body-header h1 span:nth-child(1){
-    opacity: 0;
-    transform: translateY(-20px);
-  }
- body header.body-header h1 span:nth-child(2){
-    opacity: 0;
-    transform: translateY(-30px);
-  }
- body header.body-header h1 span:nth-child(3){
-    opacity: 0;
-    transform: translateY(-50px);
-  }
- body header.body-header h1 span:nth-child(4){
-    opacity: 0;
-    transform: translateY(-10px);
-  }
- body header.body-header h1 span:nth-child(5){
-    opacity: 0;
-    transform: translateY(-50px);
-  }
- body header.body-header h1 span:nth-child(6){
-    opacity: 0;
-    transform: translateY(-20px);
-  }
- body header.body-header h1 span:nth-child(7){
-    opacity: 0;
-    transform: translateY(-40px);
-  }
-  body header.body-header h1 span:nth-child(8){
-    opacity: 0;
-    transform: translateY(-10px);
-  }
- body header.body-header h1 span:nth-child(9){
-    opacity: 0;
-    transform: translateY(-30px);
-  }
- body header.body-header h1 span:nth-child(10){
-    opacity: 0;
-    transform: translateY(-20px);
-  }
-  h1 span:nth-child(1){
-      transition-delay: 1000ms;
-  }
-  h1 span:nth-child(2){
-      transition-delay: 700ms;
-  }
-  h1 span:nth-child(3){
-      transition-delay: 900ms;
-  }
-  h1 span:nth-child(4){
-      transition-delay: 800ms;
-  }
-  h1 span:nth-child(5){
-      transition-delay: 1000ms;
-  }
-  h1 span:nth-child(6){
-      transition-delay: 700ms;
-  }
-  h1 span:nth-child(7){
-      transition-delay: 900ms;
-  }
-  h1 span:nth-child(8){
-      transition-delay: 800ms;
-  }
-  h1 span:nth-child(9){
-      transition-delay: 600ms;
-  }
-  h1 span:nth-child(10){
-      transition-delay: 700ms;
-  }
- body header.body-header h1 span:nth-child(11){
-    opacity: 0;
-    transform: translateY(30px);
-  }
- body header.body-header h1 span:nth-child(12){
-    opacity: 0;
-    transform: translateY(50px);
-  }
- body header.body-header h1 span:nth-child(13){
-    opacity: 0;
-    transform: translateY(20px);
-  }
- body header.body-header h1 span:nth-child(14){
-    opacity: 0;
-    transform: translateY(30px);
-  }
- body header.body-header h1 span:nth-child(15){
-    opacity: 0;
-    transform: translateY(50px);
-  }
-  h1 span:nth-child(11){
-      transition-delay: 1300ms;
-  }
-  h1 span:nth-child(12){
-      transition-delay: 1500ms;
-  }
-  h1 span:nth-child(13){
-      transition-delay: 1400ms;
-  }
-  h1 span:nth-child(14){
-      transition-delay: 1200ms;
-  }
-  h1 span:nth-child(15){
-      transition-delay: 1450ms;
-  }
-  #switch,
-  #circle {
-    cursor: pointer;
-    -webkit-transition: all 300ms linear;
-    transition: all 300ms linear; 
-  } 
-  #switch {
-    width: 60px;
-    height: 8px;
-    border: 2px solid #8167a9;
-    border-radius: 27px;
-    background: #000;
-    position: relative;
-    display: block;
-    margin: 0 auto;
-    text-align: center;
-    opacity: 1;
-    transform: translate(0);
-      transition: all 300ms linear;
-      transition-delay: 1900ms;
-  }
-  body header.body-header #switch{
-    opacity: 0;
-    transform: translateY(40px);
-      transition-delay: 1900ms;
-  }
-  #circle {
-    position: absolute;
-    top: -11px;
-    left: -13px;
-    width: 26px;
-    height: 26px;
-    border-radius: 50%;
-    background: #000;
-  }
-  .switched {
-    border-color: #000 !important;
-    background: #8167a9 !important;
-  }
-  .switched #circle {
-    left: 43px;
-    box-shadow: 0 4px 4px rgba(26,53,71,0.25), 0 0 0 1px rgba(26,53,71,0.07);
-    background: #fff;
-  }
-  .nav-item .dropdown-menu {
-      transform: translate3d(0, 10px, 0);
-      visibility: hidden;
-      opacity: 0;
-    max-height: 0;
-      display: block;
-    padding: 0;
-    margin: 0;
-      transition: all 200ms linear;
-  }
-  .nav-item.show .dropdown-menu {
-      opacity: 1;
-      visibility: visible;
-    max-height: 999px;
-      transform: translate3d(0, 0px, 0);
-  }
-  .dropdown-menu {
-    padding: 10px!important;
-    margin: 0;
-    font-size: 13px;
-    letter-spacing: 1px;
-    color: #212121;
-    background-color: #fcfaff;
-    border: none;
-    border-radius: 3px;
-    box-shadow: 0 5px 10px 0 rgba(138, 155, 165, 0.15);
-      transition: all 200ms linear;
-  }
-  .dropdown-toggle::after {
-    display: none;
-  }
-  
-  .dropdown-item {
-    padding: 3px 15px;
-    color: #212121;
-    border-radius: 2px;
-      transition: all 200ms linear;
-  }
-  .dropdown-item:hover, 
-  .dropdown-item:focus {
-    color: #fff;
-    background-color: rgba(129,103,169,.6);
-  }
-  
-  body header.dark{
-    color: #fff;
-    background-color: #1f2029;
-  }
-  body header.dark .navbar-brand img{
-    filter: brightness(100%);
-  }
-  body header.dark h1{
-    color: #fff;
-  }
- body header.dark h1 span{
-      transition-delay: 0ms !important;
-  }
- body header.dark p{
-    color: #fff;
-      transition-delay: 0ms !important;
-  }
-  body.dark .bg-light {
-    background-color: #14151a !important;
-  }
-  body header.dark .start-header {
-    box-shadow: 0 10px 30px 0 rgba(0, 0, 0, 0.15);
-  }
-  body header.dark .start-header.scroll-on {
-    box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.15);
-  }
-  body header.dark .nav-link{
-    color: #fff !important;
-  }
-  body header.dark .nav-item.active .nav-link{
-    color: #999 !important;
-  }
-  body header.dark .dropdown-menu {
-    color: #fff;
-    background-color: #1f2029;
-    box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.25);
-  }
-  body header.dark .dropdown-item {
-    color: #fff;
-  }
-  body header.dark .navbar-light .navbar-toggler-icon {
-    border-bottom: 1px solid #fff;
-  }
-  body header.dark .navbar-light .navbar-toggler-icon:after, 
-  body header.dark .navbar-light .navbar-toggler-icon:before{
-    background-color: #fff;
-  }
- body header.dark .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
-    border-color: transparent;
-  }
-  
-  
-  /* Einde Primary */
-  /* Begin Media */
-  /* #Media
-================================================== */
-
-@media (max-width: 767px) { 
-    h1{
-      font-size: 38px;
-    }
-    .nav-item:after{
-      display: none;
-    }
-    .nav-item::before {
-      position: absolute;
-      display: block;
-      top: 15px;
-      left: 0;
-      width: 11px;
-      height: 1px;
-      content: "";
-      border: none;
-      background-color: #000;
-      vertical-align: 0;
-    }
-    .dropdown-toggle::after {
-      position: absolute;
-      display: block;
-      top: 10px;
-      left: -23px;
-      width: 1px;
-      height: 11px;
-      content: "";
-      border: none;
-      background-color: #000;
-      vertical-align: 0;
-      transition: all 200ms linear;
-    }
-    .dropdown-toggle[aria-expanded="true"]::after{
-      transform: rotate(90deg);
-      opacity: 0;
-    }
-    .dropdown-menu {
-      padding: 0 !important;
-      background-color: transparent;
-      box-shadow: none;
-      transition: all 200ms linear;
-    }
-    .dropdown-toggle[aria-expanded="true"] + .dropdown-menu {
-      margin-top: 10px !important;
-      margin-bottom: 20px !important;
-    }
-   body header.dark .nav-item::before {
-      background-color: #fff;
-    }
-    body header.dark .dropdown-toggle::after {
-      background-color: #fff;
-    }
-    body header.dark .dropdown-menu {
-      background-color: transparent;
-      box-shadow: none;
-    }
-  }
-  /* Einde Media*/
-  /* Begin Link*/
-  .logo {
-    position: absolute;
-    bottom: 30px;
-    right: 30px;
-    display: block;
-    z-index: 100;
-    transition: all 250ms linear;
-  }
-  .logo img {
-    height: 26px;
-    width: auto;
-    display: block;
-    filter: brightness(10%);
-    transition: all 250ms linear;
-  }
-  body header.dark .logo img {
-    filter: brightness(100%);
-  }
-   /* Einde Link*/
