--- a/site/style.css
+++ b/site/style.css
@@ -7,26 +7,8 @@
     padding: 0;
     box-sizing: border-box;
 }
-footer body{
-    line-height: 1.5;
-    font-family: 'Poppins', sans-serif;
-}
-header body{
-    
-        font-family: 'Poppins', sans-serif;
-      font-size: 16px;
-      line-height: 24px;
-      font-weight: 400;
-      color: #212112;
-      background-image: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/1462889/pat-back.svg');
-      background-position: center;
-      background-repeat: repeat;
-      background-size: 7%;
-      background-color: #fff;
-      overflow-x: hidden;
-        transition: all 200ms linear;
-    
-}
+
+
 
 ul{
     list-style: none;
@@ -35,232 +17,105 @@ table{
     position: relative;
     left:12.5%;
 }
-
 /* Einde Algemeen */
 /* Header Begin */
-.header-blue {
-    background: linear-gradient(135deg, #fe2929, #ffb3c5);
-    background-color: #184e8e;
-    padding-bottom: 80px;
-    font-family: 'Source Sans Pro', sans-serif;
+
+
+body{
+    background:#eee;
+}
+
+.header2 {
+  font-family: "Montserrat", sans-serif;
+  color: #8d97ad;
+  font-weight: 300;
+}
+
+.header2.bg-success-gradiant {
+  background: #2cdd9b;
+  background: -webkit-linear-gradient(legacy-direction(to right), #2cdd9b 0%, #1dc8cc 100%);
+  background: -webkit-gradient(linear, left top, right top, from(#2cdd9b), to(#1dc8cc));
+  background: -webkit-linear-gradient(left, #2cdd9b 0%, #1dc8cc 100%);
+  background: -o-linear-gradient(left, #2cdd9b 0%, #1dc8cc 100%);
+  background: linear-gradient(to right, #2cdd9b 0%, #1dc8cc 100%);
+}
+
+.header2 .font-12 {
+  font-size: 12px;
+}
+
+.header2 .dropdown-item {
+  padding: 8px 1rem;
+  color: #8d97ad;
+}
+
+.header2 .h2-nav .navbar-nav .nav-item .nav-link {
+  padding: 12px 0px;
+  color: #ffffff;
+  font-weight: 400;
+}
+
+.header2 .h2-nav .navbar-nav .nav-item .nav-link:hover {
+  color: #263238;
+}
+
+.header2 .h2-nav .navbar-nav .nav-item {
+  margin: 0 20px;
+}
+
+@media (min-width: 1024px) {
+  .header2 .navbar-nav > .dropdown .dropdown-menu {
+    min-width: 210px;
+    margin-top: 0px;
   }
-  
-  @media (min-width:768px) {
-    .header-blue {
-      padding-bottom: 120px;
-    }
+}
+
+@media (min-width: 1024px) {
+  .header2 .dropdown-submenu:hover > .dropdown-menu {
+    display: block;
   }
-  
-  .header-blue .navbar {
-    background: transparent;
-    padding-top: .75rem;
-    padding-bottom: .75rem;
-    color: #fff;
-    border-radius: 0;
-    box-shadow: none;
-    border: none;
+}
+
+.header2 .dropdown-toggle::after {
+  display: none;
+}
+
+@media (min-width: 1024px) {
+  .header2 .hover-dropdown .navbar-nav > .dropdown:hover > .dropdown-menu {
+    display: block;
+    margin-top: 0px;
   }
-  
-  @media (min-width:768px) {
-    .header-blue .navbar {
-      padding-top: 1rem;
-      padding-bottom: 1rem;
-    }
-  }
-  
-  .header-blue .navbar .navbar-brand {
-    font-weight: bold;
-    color: inherit;
-  }
-  
-  .header-blue .navbar .navbar-brand:hover {
-    color: #f0f0f0;
-  }
-  
-  .header-blue .navbar .navbar-collapse {
-    border-top: 1px solid rgba(255,255,255,0.3);
-    margin-top: .5rem;
-  }
-  
-  @media (min-width:768px) {
-    .header-blue .navbar .navbar-collapse {
-      border-color: transparent;
-      margin: 0;
-    }
-  }
-  
-  .header-blue .navbar .navbar-collapse span .login {
-    color: #fff;
-    margin-right: .5rem;
-    text-decoration: none;
-  }
-  
-  .header-blue .navbar .navbar-collapse span .login:hover {
-    color: #fff;
-  }
-  
-  .header-blue .navbar .navbar-toggler {
-    border-color: rgba(255,255,255,0.3);
-  }
-  
-  .header-blue .navbar .navbar-toggler:hover, .header-blue .navbar-toggler:focus {
-    background: none;
-  }
-  
-  @media (min-width: 768px) {
-    .header-blue .navbar-nav .nav-link {
-      padding-left: .7rem;
-      padding-right: .7rem;
-    }
-  }
-  
-  @media (min-width: 992px) {
-    .header-blue .navbar-nav .nav-link {
-      padding-left: 1.2rem;
-      padding-right: 1.2rem;
-    }
-  }
-  
-  .header-blue .navbar.navbar-light .navbar-nav .nav-link {
-    color: #fff;
-  }
-  
-  .header-blue .navbar.navbar-light .navbar-nav .nav-link:focus, .header-blue .navbar.navbar-light .navbar-nav .nav-link:hover {
-    color: #fcfeff !important;
-    background-color: transparent;
-  }
-  
-  .header-blue .navbar .navbar-nav > li > .dropdown-menu {
-    margin-top: -5px;
-    box-shadow: 0 4px 8px rgba(0,0,0,.1);
-    background-color: #fff;
-    border-radius: 2px;
-  }
-  
-  .header-blue .navbar .dropdown-menu .dropdown-item:focus, .header-blue .navbar .dropdown-menu .dropdown-item {
-    line-height: 2;
-    color: #37434d;
-  }
-  
-  .header-blue .navbar .dropdown-menu .dropdown-item:focus, .header-blue .navbar .dropdown-menu .dropdown-item:hover {
-    background: #ebeff1;
-  }
-  
-  .header-blue .action-button, .header-blue .action-button:not(.disabled):active {
-    border: 1px solid rgb(255,255,255);
-    border-radius: 40px;
-    color: #fff;
-    box-shadow: none;
-    text-shadow: none;
-    padding: .3rem .8rem;
-    background: transparent;
-    transition: background-color 0.25s;
-    outline: none;
-  }
-  
-  .header-blue .action-button:hover {
-    color: #fff;
-  }
-  
-  .header-blue .navbar .form-inline label {
-    color: #d9d9d9;
-  }
-  
-  .header-blue .navbar .form-inline .search-field {
-    display: inline-block;
-    width: 80%;
-    background: none;
-    border: none;
-    border-bottom: 1px solid transparent;
-    border-radius: 0;
-    color: #fff;
-    box-shadow: none;
-    color: inherit;
-    transition: border-bottom-color 0.3s;
-  }
-  
-  .header-blue .navbar .form-inline .search-field:focus {
-    border-bottom: 1px solid #ccc;
-  }
-  
-  .header-blue .hero {
-    margin-top: 20px;
-    text-align: center;
-  }
-  
-  @media (min-width:768px) {
-    .header-blue .hero {
-      margin-top: 60px;
-      text-align: left;
-    }
-  }
-  
-  .header-blue .hero h1 {
-    color: #fff;
-    font-size: 40px;
-    margin-top: 0;
-    margin-bottom: 15px;
-    font-weight: 300;
-    line-height: 1.4;
-  }
-  
-  @media (min-width:992px) {
-    .header-blue .hero h1 {
-      margin-top: 190px;
-      margin-bottom: 24px;
-      line-height: 1.2;
-    }
-  }
-  
-  .header-blue .hero p {
-    color: rgba(255,255,255,0.8);
-    font-size: 20px;
-    margin-bottom: 30px;
-    font-weight: 300;
-  }
-  
-  .header-blue .phone-holder {
-    text-align: right;
-  }
-  
-  .header-blue div.iphone-mockup {
-   position: relative;
-      max-width: 300px;
-      margin-top: 172px;
-      display: inline-block;
-  }
-  
-  .header-blue .iphone-mockup img.device {
-    width: 100%;
-    height: auto;
-  }
-  
-  .header-blue .iphone-mockup .screen {
-    position: absolute;
-    width: 88%;
-    height: 77%;
-    top: 12%;
-    border-radius: 2px;
-    left: 6%;
-    border: 1px solid #444;
-    background-color: #aaa;
-    overflow: hidden;
-    background: url(../../assets/img/screen-content-iphone-6.jpg);
-    background-size: cover;
-    background-position: center;
-  }
-  
-  .header-blue .iphone-mockup .screen:before {
-    content: '';
-    background-color: #fff;
-    position: absolute;
-    width: 70%;
-    height: 140%;
-    top: -12%;
-    right: -60%;
-    transform: rotate(-19deg);
-    opacity: 0.2;
-  }
+}
+
+.header2 .btn-dark {
+  color: #fff;
+  background-color: #343a40;
+  border-color: #343a40;
+}
+
+.header2 .btn-dark:hover {
+  color: #fff;
+  background-color: #23272b;
+  border-color: #1d2124;
+}
+
+.header2 .h2-nav .navbar-nav .nav-item .btn {
+  opacity: 0.5;
+}
+ 
+.header2 .h2-nav .navbar-nav .nav-item .btn:hover {
+  opacity: 1;
+}
+
+.header2 .dropdown-submenu > .dropdown-menu {
+  top: 0;
+  left: 100%;
+  margin-left: 0;
+  border-radius: 0.25rem;
+  display: none;
+}
+
+
 /*
 .header-top {
     color: #ccc;
@@ -276,14 +131,14 @@ table{
     color: #000;
     height: 55.4px;
 }
-*/
+
 header {
     background: linear-gradient(180deg, black 50%, white 50%);
     height: 110px;
     width: 1519.2px;
     border-bottom: 1px solid #ccc;
-
-}
+}*/
+    
 /* Einde Header */
 /* Navigation Begin */
 .navigation {
